mdapi/objects/How_To__kav.object
<CustomObject>
    <articleTypeChannelDisplay>
        <articleTypeTemplates>
            <channel>App</channel>
            <template>Toc</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Prm</channel>
            <template>Toc</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Csp</channel>
            <template>Toc</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Pkb</channel>
            <template>Toc</template>
        </articleTypeTemplates>
    </articleTypeChannelDisplay>
    <description>How To Articles - Summary / Instructions</description>
    <fields>
        <fullName>Approval_Status__c</fullName>
        <description>Not to be included on the page layout.  This field is set by the approval process.</description>
        <label>Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                    <default>true</default>
                    <label>Pending</label>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ArticleBody__c</fullName>
        <description>Main text and code for article</description>
        <label>Instructions</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Intended_Audience__c</fullName>
        <description>Intended target audience for the article</description>
        <label>Intended Audience</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Internal</fullName>
                    <default>true</default>
                    <label>Internal</label>
                </value>
                <value>
                    <fullName>External</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Legacy_KB_Date_Created__c</fullName>
        <description>Enter the date the legacy KB article was created</description>
        <label>Legacy KB Date Created</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Legacy_KB_Number__c</fullName>
        <description>Legacy support site KB article number</description>
        <inlineHelpText>Format:  KB ###</inlineHelpText>
        <label>Legacy KB Number</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_Keywords__c</fullName>
        <inlineHelpText>NOT REQUIRED FOR NEW ARTICLES:  Copy and paste the keyword field content from the Legacy site article.</inlineHelpText>
        <label>Legacy Keywords</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_URL__c</fullName>
        <inlineHelpText>Not required for new content.  Paste the Full HTTPS URL from the legacy website.</inlineHelpText>
        <label>Legacy URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Overview__c</fullName>
        <description>Overview (Summary) of the article.</description>
        <label>Overview</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Product_Versions__c</fullName>
        <description>List of products and exact versions or ranges of versions where this message can be seen.
Example:  ShadowProtect SPX (Windows) - All</description>
        <inlineHelpText>List of products and exact versions or ranges of versions where this message can be seen.
Example:  ShadowProtect SPX (Windows) - All</inlineHelpText>
        <label>Product Versions Affected</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>How To</label>
    <pluralLabel>How Tos</pluralLabel>
    <validationRules>
        <fullName>How_To_Title_Length_Rule</fullName>
        <active>true</active>
        <description>Require that the title is less than 66 characters</description>
        <errorConditionFormula>LEN( Title ) &gt; 65</errorConditionFormula>
        <errorMessage>Title Length too long - To optimize Search Engine results, the article title must be less than 66 characters.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>How_To_Title_Rule</fullName>
        <active>true</active>
        <description>Require that the title begins with How To:</description>
        <errorConditionFormula>NOT(BEGINS(Title,&apos;How To: &apos;))</errorConditionFormula>
        <errorMessage>To make it easier to find How To articles, the title must begin with &quot;How To: &quot;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Legacy_KB_Article_Format</fullName>
        <active>true</active>
        <description>Format:  KB ###</description>
        <errorConditionFormula>NOT(
OR(
ISBLANK(Legacy_KB_Number__c),
REGEX( Legacy_KB_Number__c ,
&quot;KB [0-9]{1,3}&quot;)
)
)</errorConditionFormula>
        <errorMessage>The Legacy KB Article field is reserved for KB ### article number references.  Required format example: KB 263</errorMessage>
    </validationRules>
</CustomObject>